--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Flutter Workflow
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ master, staticAnalysis ]
   pull_request:
     branches: [ master ]
 
